# masid

./: .gitignore  CLAUDE.md  CREWAI_IMPLEMENTATION_PLAN.md  LICENSE  README.md  TODO.md  export_full_results.py  export_results.py  pyproject.toml
.claude/rules/: crewai.md
.github/workflows/: ci.yml
configs/: crewai_experiment.yaml  crewai_groq.yaml  default.yaml  full_batch.yaml  groq.yaml  groq_all_domains.yaml  groq_full.yaml  groq_openai_judge_test.yaml  groq_pilot.yaml  groq_pilot_32b.yaml  groq_pilot_70b.yaml  openai_gpt41mini.yaml  pilot_batch.yaml
data/: trials_export.csv
data/export/: agent_outputs_full.csv  masid_full_export.xlsx  summary_stats.txt  trials_summary.csv
data/export/trial_details/: iamd_project_planning_pp_001_0fccdd51-29e.txt  iamd_project_planning_pp_001_1d875e20-2d2.txt  iamd_project_planning_pp_001_1fb1c887-9ac.txt  iamd_project_planning_pp_001_4ba00d97-032.txt  iamd_project_planning_pp_001_501814e4-081.txt  iamd_project_planning_pp_001_52795301-a6e.txt  iamd_project_planning_pp_001_52d350f1-f41.txt  iamd_project_planning_pp_001_55f63c16-ffa.txt  iamd_project_planning_pp_001_57910eef-da2.txt  iamd_project_planning_pp_001_5b7e7161-7f7.txt  iamd_project_planning_pp_001_7c9cc932-15a.txt  iamd_project_planning_pp_001_874df222-14d.txt  iamd_project_planning_pp_001_9d4a1664-439.txt  iamd_project_planning_pp_001_a531039c-8a6.txt  iamd_project_planning_pp_001_a8ca6c07-9eb.txt  iamd_project_planning_pp_001_b418c1de-775.txt  iamd_project_planning_pp_001_c89db7db-589.txt  (+551 more)
plans/: speed-options.md
src/masid/: __init__.py  cli.py  config.py
src/masid_crewai/: __init__.py  architectures.py  cli.py  config.py  evaluation.py  runner.py  tasks.py
tests/: conftest.py  test_agents.py  test_architectures.py  test_config.py  test_crewai_architectures.py  test_evaluation.py  test_orchestrator.py  test_sandbox.py  test_storage.py
(+18 files in other folders)
